--- a/HaierOven/Base.lproj/Main.storyboard
+++ b/HaierOven/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="eVu-0e-avz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Qb9-bz-vmv">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
@@ -12,8 +12,6 @@
             <string>FZLTCHJW--GB1-0</string>
         </mutableArray>
         <mutableArray key="FZLTHJW.ttf">
-            <string>FZLTHJW--GB1-0</string>
-            <string>FZLTHJW--GB1-0</string>
             <string>FZLTHJW--GB1-0</string>
             <string>FZLTHJW--GB1-0</string>
             <string>FZLTHJW--GB1-0</string>
@@ -304,7 +302,7 @@
                     <navigationItem key="navigationItem" id="UYu-wW-zSu">
                         <nil key="title"/>
                         <view key="titleView" contentMode="scaleToFill" id="ftc-hP-qXv">
-                            <rect key="frame" x="130" y="5.5" width="60" height="33"/>
+                            <rect key="frame" x="130" y="6" width="60" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="登陆" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oNe-Mw-oan">
@@ -1662,43 +1660,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hfL-NP-ics">
-                                <rect key="frame" x="0.0" y="67" width="160" height="43"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hpK-yd-Y2Y">
+                                <rect key="frame" x="0.0" y="64" width="320" height="43"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="43" id="PHP-vo-bd8"/>
+                                    <constraint firstAttribute="width" secondItem="hpK-yd-Y2Y" secondAttribute="height" multiplier="320:43" id="3Cw-Ip-SGe"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="16"/>
-                                <state key="normal" title="邮箱注册">
-                                    <color key="titleColor" red="0.73725490196078436" green="0.42745098039215684" blue="0.12549019607843137" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" red="0.73725490199999999" green="0.42745098040000001" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="RegisterType:" destination="hEv-de-PKi" eventType="touchUpInside" id="EYl-lA-u20"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3zt-Gy-zEz">
-                                <rect key="frame" x="161" y="67" width="159" height="43"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="16"/>
-                                <state key="normal" title="手机注册">
-                                    <color key="titleColor" red="0.73725490199999999" green="0.42745098040000001" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" red="0.73725490199999999" green="0.42745098040000001" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="RegisterType:" destination="hEv-de-PKi" eventType="touchUpInside" id="u4g-oB-sxe"/>
-                                </connections>
-                            </button>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="3zt-Gy-zEz" firstAttribute="leading" secondItem="hfL-NP-ics" secondAttribute="trailing" constant="1" id="7l8-TA-gkd"/>
-                            <constraint firstItem="hfL-NP-ics" firstAttribute="leading" secondItem="xZp-5q-us1" secondAttribute="leading" id="7vE-rg-GTg"/>
-                            <constraint firstItem="hfL-NP-ics" firstAttribute="top" secondItem="6Pf-yi-x43" secondAttribute="bottom" constant="3" id="O5c-Cw-TPX"/>
-                            <constraint firstItem="3zt-Gy-zEz" firstAttribute="height" secondItem="hfL-NP-ics" secondAttribute="height" id="Tf3-Uw-sxn"/>
-                            <constraint firstItem="3zt-Gy-zEz" firstAttribute="width" secondItem="hfL-NP-ics" secondAttribute="width" id="XQo-76-rXo"/>
-                            <constraint firstAttribute="trailing" secondItem="3zt-Gy-zEz" secondAttribute="trailing" id="aex-r3-aLS"/>
-                            <constraint firstItem="3zt-Gy-zEz" firstAttribute="top" secondItem="6Pf-yi-x43" secondAttribute="bottom" constant="3" id="alV-7N-6D4"/>
+                            <constraint firstItem="hpK-yd-Y2Y" firstAttribute="top" secondItem="6Pf-yi-x43" secondAttribute="bottom" id="L9m-eL-qq1"/>
+                            <constraint firstItem="hpK-yd-Y2Y" firstAttribute="leading" secondItem="xZp-5q-us1" secondAttribute="leading" id="W7j-th-hf6"/>
+                            <constraint firstAttribute="trailing" secondItem="hpK-yd-Y2Y" secondAttribute="trailing" id="ikz-w4-xG4"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="U3q-Pz-haV">
@@ -1737,8 +1711,7 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="PhoneBtn" destination="3zt-Gy-zEz" id="rok-NJ-YrF"/>
-                        <outlet property="emailBtn" destination="hfL-NP-ics" id="xWI-tf-hMt"/>
+                        <outlet property="headview" destination="hpK-yd-Y2Y" id="cyO-6F-kz4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0cw-Uu-zYR" userLabel="First Responder" sceneMemberID="firstResponder"/>
