--- a/HaierOven/PhoneRegisterView.xib
+++ b/HaierOven/PhoneRegisterView.xib
@@ -85,14 +85,14 @@
                     <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZKH-L5-1Ka" customClass="UnderLineButton">
-                    <rect key="frame" x="138" y="159" width="112" height="29"/>
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZKH-L5-1Ka" customClass="UnderLineButton">
+                    <rect key="frame" x="138" y="159" width="140" height="29"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="112" id="1A8-b6-oDe"/>
                         <constraint firstAttribute="height" constant="29" id="Wek-dV-uQo"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="FZLTXHK--GBK1-0" family="FZLanTingHei-EL-GBK" pointSize="14"/>
-                    <state key="normal" title="海尔烤箱隐私协议">
+                    <state key="normal" title="海尔注册用户服务条款">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
